# OpenManipulator_X_PnP_full_version

./: .gitignore  README.md  fsdf
open_manipulator/open_manipulator_bringup/: setup.py
open_manipulator/open_manipulator_bringup/launch/: open_manipulator_x.launch.py  rsbp_full_bringup.launch.py
open_manipulator/open_manipulator_bringup/scripts/: flask_cam_node.py
open_manipulator/open_manipulator_description/urdf/open_manipulator_x/: open_manipulator_x.urdf  open_manipulator_x.urdf.xacro  open_manipulator_x_arm.urdf.xacro
open_manipulator/open_manipulator_moveit_config/config/: moveit.rviz
open_manipulator/open_manipulator_moveit_config/config/open_manipulator_x/: open_manipulator_x.srdf
open_manipulator/open_manipulator_moveit_config/launch/: open_manipulator_x_moveit.launch.py
open_manipulator/open_manipulator_x_description/urdf/: open_manipulator_x.urdf.xacro
open_manipulator/open_manipulator_x_moveit_config/config/: moveit.rviz
openmanipulator_task_executor/: CMakeLists.txt  package.xml
openmanipulator_task_executor/include/openmanipulator_task_executor/: robot_interface.hpp
openmanipulator_task_executor/launch/: pickandplace_bringup.launch.py
openmanipulator_task_executor/openmanipulator_task_executor/: ArUco_coord_extractor.py  markerpose_test.py  robot_interface_client.py
openmanipulator_task_executor/scripts/: ArUco_coord_extractor.py  coordinate_extractor.py  coordinate_extractor_eyetohand.py  keyboard_trigger_node.py  open_manipulator_x_pickandplace.py  open_manipulator_x_pickandplace1.py  robot_interface_client1.py
openmanipulator_task_executor/src/: robot_interface.cpp
openmanipulator_task_executor/test/: cv2_test.py  eyeinhandpnp.py  flask_cam_test.py  pnp_marker_pose_extractor.py  rpi_camera_flask.py
pnp_interfaces/: CMakeLists.txt
pnp_interfaces/action/: EmergencyStop.action  MoveToJointPose.action  MoveToNamed.action  MoveToPose.action
pnp_interfaces/msg/: DetectedObject.msg
pnp_interfaces/srv/: RobotInterfaceMovetopose.srv  RobotInterfaceOneString.srv
src/open_manipulator/open_manipulator_x_moveit_config/config/: open_manipulator_x.srdf
src/open_manipulator/open_manipulator_x_moveit_config/launch/: move_group.launch.py
src/openmanipulator_task_executor/: setup.py
src/openmanipulator_task_executor/scripts/: open_manipulator_x_pickandplace.py  robot_interface_client.py
src/openmanipulator_task_executor/test/: eyeinhandpnp.py  pnp_joint_pose_extractor.py
src/pnp_interfaces/: package.xml
src/pnp_interfaces/action/: GripperControl.action
src/pnp_interfaces/srv/: RobotInterfaceBusy.srv
